# TriggerMaster

./: README.md  global_var.py  main.py  pyproject.toml
lib/: gui_config.py
lib/Engine/: CombinationsGenerator.py
lib/Handlers/: DateHandler.py  ErrorHandler.py  FileHandler.py  LoggerGUI.py
lib/util/: decorators.py
root/: main.py  pyinstaller.py
root/lib/Engine/: CombinationsGenerator.py
root/lib/Handlers/: DateHandler.py  ErrorHandler.py  FileHandler.py  LoggerGUI.py
root/lib/config/: gui_config.py  help.py
root/lib/util/: decorators.py  dependencies.py
