[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["togathrust <togathruster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.2"
tkcalendar = "^1.6.1"
numpy = "^2.1.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
